2003-01-09  Thomas Pfaff  <tpfaff@gmx.net>
	
	* winsup.api/pthread/mutex1d.c: New test. Port from pthreads-win32 
	project.
	* winsup.api/pthread/mutex1e.c: Ditto.
	* winsup.api/pthread/mutex4.c: Ditto.
	* winsup.api/pthread/mutex5.c: Ditto.
	* winsup.api/pthread/mutex6d.c: Ditto.
	* winsup.api/pthread/mutex6e.c: Ditto.
	* winsup.api/pthread/mutex7.c: Ditto.
	* winsup.api/pthread/mutex7d.c: Ditto.
	* winsup.api/pthread/mutex7e.c: Ditto.
	* winsup.api/pthread/mutex7r.c: Ditto.

2002-11-25  Robert Collins  <rbtcollins@hotmail.com>

	* readme: Document running portions of the test suite (Thanks Egor!).
	* winsup.api/pthread/mainthreadexits.c: New file, derived from 
	Thomas Pfaff's test cases.
	* winsup.api/pthread/threadidafterfork.c: Ditto.

2002-08-25  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (RUNTEST): Use Makefile's srcdir and bupdir* macros,
	where appropriate.
	* winsup.api/winsup.exp: Use -nodefaultlibs when linking executable to
	avoid potentially linking installed dll.

2002-07-06  Christopher Faylor  <cgf@redhat.com>

	* testsuite/winsup.api/winsup.exp: Add -mwin32 to gcc flags so
	windows.h will be found.

2002-07-04  Egor Duda  <deo@logos-m.ru>

	* winsup.api/pthread/cancel1.c: New test. Port from pthreads-win32 
	project.
	* winsup.api/pthread/cancel2.c: Ditto.
	* winsup.api/pthread/cancel3.c: Ditto.
	* winsup.api/pthread/cancel4.c: Ditto.
	* winsup.api/pthread/cancel5.c: Ditto.

2002-07-03  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Eliminate unneeded Makefile recreation rule.

2002-02-27  Christopher Faylor  <cgf@redhat.com>

	* winsup.api/systemcall.c (main): Ensure that stdin is redirected.

2001-11-18  Egor Duda  <deo@logos-m.ru>

	* winsup.api/pthread/condvar3_1.c: Fix debugging output.

2001-11-15  Egor Duda  <deo@logos-m.ru>

	* winsup.api/pthread/: New directory. Ports of pthread functionality
	tests from pthreads-win32 project.
	* winsup.api/pthread/test.h: Commmon declaraions for pthread tests.